# shark-bot

./: .gitignore  README.md  pyproject.toml  shark.py  towns.txt
cogs/: music_cog.py  name_cog.py
extractors/: cdn_extractor.py  extractor_factory.py  soundcloud_extractor.py  youtube_extractor.py
schemas/: audio_model.py  track.py
services/: music_service.py  name_service.py
utils/: config.py  config_interface.py  configs.json  helper.py  track_extractor.py
