[project]
name = "shark-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.10"
dependencies = [
    "aiohttp>=3.12.15",
    "asyncio>=4.0.0",
    "deno>=2.6.4",
    "discord-py>=2.6.3",
    "pydantic>=2.11.7",
    "pynacl>=1.5.0",
    "python-dotenv>=1.1.1",
    "soundfile>=0.13.1",
    "yt-dlp-ejs>=0.3.2",
    "yt-dlp[default]>=2025.12.8",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "ruff>=0.12.11",
]

[tool.ruff]
exclude = [".venv"]
respect-gitignore = true
line-length = 120
lint.ignore = [
    "F403"
]
