[project]
name = "shark-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.10"
dependencies = [
    "aiohttp>=3.14.1",
    "asyncio>=4.0.0",
    "dave-py>=0.1.2",
    "deno>=2.9.2",
    "discord-py[voice]>=2.7.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "soundfile>=0.14.0",
    "uvloop>=0.22.1",
    "yt-dlp-ejs>=0.8.0",
    "yt-dlp[default]>=2026.7.4",
]

[dependency-groups]
dev = ["mypy>=2.2.0", "ruff>=0.15.20"]

[tool.ruff]
exclude = [".venv"]
respect-gitignore = true
line-length = 120
lint.ignore = ["F403"]
